Add better explanation for the data preparation directory structure

--- a/TERN-RPE/TERN-Joint-Embedding.ipynb
+++ b/TERN-RPE/TERN-Joint-Embedding.ipynb
@@ -142,32 +142,32 @@
     "\n",
     "Make sure to have extracted the image and annotation features for the following class to function properly. The data directory tree is being provided below for reference. Suppose the folder containing all the data is named `data`.\n",
     "```\n",
-    "data\n",
-    "├── bert_features\n",
+    "data ───────────────────────────> Contains the Dataset and the relevant pre-computed features\n",
+    "├── bert_features ──────────────> Contains the BERT Features for the annotations in the Flickr30k Dataset\n",
     "│   ├── 0.npz\n",
     "│   ├── 1.npz\n",
     "│   ├── 2.npz\n",
     "│   ├── .....\n",
-    "│   └── 99999.npz\n",
-    "├── bottom_up\n",
+    "│   └── 155069.npz ─────────────> BERT Features for the annotation text with ann_id = 155069\n",
+    "├── bottom_up ──────────────────> Contains the Bottom-up Features for all the annotations in the Flickr30k Dataset\n",
     "│   ├── data_att\n",
     "│   │   ├── 1000092795.npz\n",
     "│   │   ├── 10002456.npz\n",
     "│   │   ├── ...\n",
-    "│   │   └── 998845445.npz\n",
+    "│   │   └── 998845445.npz ──────> Bottom-Up Features for the image with image_id = 998845445\n",
     "│   └── data_box\n",
     "│       ├── 1000092795.npz\n",
     "│       ├── 10002456.npz\n",
     "│       ├── ...\n",
-    "│       └── 998845445.npz\n",
-    "├── flickr30k_annotations\n",
-    "│   ├── flickr30k_all.json\n",
-    "│   ├── train.json\n",
-    "│   └── val.json\n",
-    "└── flickr30k_images\n",
-    "    └── flickr30k_images\n",
+    "│       └── 998845445.npz ──────> Bounding Box Features for the image with image_id = 998845445\n",
+    "├── flickr30k_annotations ──────────────────> Contains the Annotation Files for the Flickr30k Dataset\n",
+    "│   ├── flickr30k_all.json ──────> Annotation File for the entire Flickr30k Images\n",
+    "│   ├── train.json ──────────────> Annotation File for the train Flickr30k Images \n",
+    "│   └── val.json ────────────────> Annotation File for the validation Flickr30k Images \n",
+    "└── flickr30k_images ───────────────────────> Contains the Image Files for the Flickr30k Dataset\n",
+    "    └── flickr30k_images ────────> Ignore this directory\n",
     "        ├── 1000092795.jpg\n",
-    "        ├── 10002456.jpg\n",
+    "        ├── 10002456.jpg ────────> Images from the Flickr30k Dataset\n",
     "        ├── ...\n",
     "        └── 998845445.jpg\n",
     "```"
