minor aesthetic fix

--- a/TERN-RPE/TERN-Joint-Embedding.ipynb
+++ b/TERN-RPE/TERN-Joint-Embedding.ipynb
@@ -160,14 +160,14 @@
     "│       ├── 10002456.npz\n",
     "│       ├── ...\n",
     "│       └── 998845445.npz ──────> Bounding Box Features for the image with image_id = 998845445\n",
-    "├── flickr30k_annotations ──────────────────> Contains the Annotation Files for the Flickr30k Dataset\n",
-    "│   ├── flickr30k_all.json ──────> Annotation File for the entire Flickr30k Images\n",
-    "│   ├── train.json ──────────────> Annotation File for the train Flickr30k Images \n",
-    "│   └── val.json ────────────────> Annotation File for the validation Flickr30k Images \n",
-    "└── flickr30k_images ───────────────────────> Contains the Image Files for the Flickr30k Dataset\n",
-    "    └── flickr30k_images ────────> Ignore this directory\n",
+    "├── flickr30k_annotations ──────> Contains the Annotation Files for the Flickr30k Dataset\n",
+    "│   ├── flickr30k_all.json ─────> Annotation File for the entire Flickr30k Images\n",
+    "│   ├── train.json ─────────────> Annotation File for the train Flickr30k Images \n",
+    "│   └── val.json ───────────────> Annotation File for the validation Flickr30k Images \n",
+    "└── flickr30k_images ───────────> Contains the Image Files for the Flickr30k Dataset\n",
+    "    └── flickr30k_images ───────> Ignore this directory\n",
     "        ├── 1000092795.jpg\n",
-    "        ├── 10002456.jpg ────────> Images from the Flickr30k Dataset\n",
+    "        ├── 10002456.jpg ───────> Images from the Flickr30k Dataset\n",
     "        ├── ...\n",
     "        └── 998845445.jpg\n",
     "```"
