--- a/TERN-RPE/TERN-RPE-Joint-Embedding-Tinker.ipynb
+++ b/TERN-RPE/TERN-RPE-Joint-Embedding-Tinker.ipynb
@@ -3068,8 +3068,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pretrained_model_path = '/Users/rishideychowdhury/Desktop/Joint-Embedding/Models/TERN_best.pth'\n",
-    "pretrained_model = torch.load(pretrained_model_path, map_location=device)['model']"
+    "# UNNECESSARY\n",
+    "# pretrained_model_path = '/Users/rishideychowdhury/Desktop/Joint-Embedding/Models/TERN_best.pth'\n",
+    "# pretrained_model = torch.load(pretrained_model_path, map_location=device)['model']"
    ]
   },
   {
@@ -3079,13 +3080,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with torch.no_grad():\n",
-    "  model_dict = model.model.state_dict()\n",
-    "  pretrained_dict = {k: v for k, v in pretrained_model.items() if k in model_dict}\n",
-    "  for key in model.model.state_dict():\n",
-    "    if key not in pretrained_dict:\n",
-    "      pretrained_dict[key] = model.model.state_dict()[key]\n",
-    "  model.model.load_state_dict(pretrained_dict)"
+    "# with torch.no_grad():\n",
+    "#   model_dict = model.model.state_dict()\n",
+    "#   pretrained_dict = {k: v for k, v in pretrained_model.items() if k in model_dict}\n",
+    "#   for key in model.model.state_dict():\n",
+    "#     if key not in pretrained_dict:\n",
+    "#       pretrained_dict[key] = model.model.state_dict()[key]\n",
+    "#   model.model.load_state_dict(pretrained_dict)"
    ]
   },
   {
@@ -3243,7 +3244,8 @@
     }
    ],
    "source": [
-    "evaluate_epoch(0, 0)"
+    "# For original TERN model it was interesting for RPE infused TERN it is not needed\n",
+    "# evaluate_epoch(0, 0)"
    ]
   },
   {
@@ -4184,7 +4186,276 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 70%|████████████████████████████▉            | 160/227 [02:46<01:11,  1.07s/it]"
+      "100%|█████████████████████████████████████████| 227/227 [03:55<00:00,  1.04s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: [27|100] || Iterations: [6356|22927] || Loss: 0.0049177387540560984 || Time:   235.9434s\n",
+      "Save model at [27|100] to last.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████| 227/227 [03:54<00:00,  1.03s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: [28|100] || Iterations: [6583|22927] || Loss: 0.0049010740966425334 || Time:   234.7072s\n",
+      "Save model at [28|100] to last.pth\n",
+      "=============================EVALUATION===================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████| 8/8 [00:06<00:00,  1.20it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting features...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████| 8/8 [00:02<00:00,  3.38it/s]\n",
+      "100%|███████████████████████████████████████████| 40/40 [00:03<00:00, 10.61it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating distance matrice...\n",
+      "Saving retrieval results...\n",
+      "Calculating distance matrice...\n",
+      "Saving retrieval results...\n",
+      "\n",
+      "Epochs: [28|100] || Loss: 0.00520968675846234 || Time:     6.6443 s\n",
+      "i2t/R@1: 0.0688 | i2t/R@5: 0.2416 | i2t/R@10: 0.3462 | t2i/R@1: 0.2148 | t2i/R@5: 0.463 | t2i/R@10: 0.5769 | \n",
+      "==========================================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████| 227/227 [03:47<00:00,  1.00s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: [29|100] || Iterations: [6810|22927] || Loss: 0.004887607617361168 || Time:   227.9449s\n",
+      "Save model at [29|100] to last.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████| 227/227 [03:49<00:00,  1.01s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: [30|100] || Iterations: [7037|22927] || Loss: 0.004842377897548912 || Time:   229.0772s\n",
+      "Save model at [30|100] to last.pth\n",
+      "=============================EVALUATION===================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████| 8/8 [00:06<00:00,  1.18it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting features...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████| 8/8 [00:02<00:00,  3.29it/s]\n",
+      "100%|███████████████████████████████████████████| 40/40 [00:03<00:00, 10.32it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating distance matrice...\n",
+      "Saving retrieval results...\n",
+      "Calculating distance matrice...\n",
+      "Saving retrieval results...\n",
+      "\n",
+      "Epochs: [30|100] || Loss: 0.005180253065191209 || Time:     6.7676 s\n",
+      "i2t/R@1: 0.0694 | i2t/R@5: 0.2416 | i2t/R@10: 0.3594 | t2i/R@1: 0.2164 | t2i/R@5: 0.4712 | t2i/R@10: 0.5862 | \n",
+      "==========================================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████| 227/227 [03:55<00:00,  1.04s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: [31|100] || Iterations: [7264|22927] || Loss: 0.0048296525787217505 || Time:   235.7898s\n",
+      "Save model at [31|100] to last.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████| 227/227 [03:52<00:00,  1.02s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: [32|100] || Iterations: [7491|22927] || Loss: 0.004845767698377896 || Time:   232.6460s\n",
+      "Save model at [32|100] to last.pth\n",
+      "=============================EVALUATION===================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████| 8/8 [00:06<00:00,  1.21it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting features...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████| 8/8 [00:02<00:00,  3.36it/s]\n",
+      "100%|███████████████████████████████████████████| 40/40 [00:03<00:00, 10.46it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating distance matrice...\n",
+      "Saving retrieval results...\n",
+      "Calculating distance matrice...\n",
+      "Saving retrieval results...\n",
+      "\n",
+      "Epochs: [32|100] || Loss: 0.005258885910734534 || Time:     6.6127 s\n",
+      "i2t/R@1: 0.0655 | i2t/R@5: 0.2357 | i2t/R@10: 0.3507 | t2i/R@1: 0.2182 | t2i/R@5: 0.4707 | t2i/R@10: 0.5917 | \n",
+      "==========================================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████| 227/227 [03:58<00:00,  1.05s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: [33|100] || Iterations: [7718|22927] || Loss: 0.00480537549777178 || Time:   238.3732s\n",
+      "Save model at [33|100] to last.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 35%|██████████████▊                           | 80/227 [01:22<02:26,  1.00it/s]AGX: exceeded compiled variants footprint limit\n",
+      "100%|█████████████████████████████████████████| 227/227 [03:54<00:00,  1.03s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: [34|100] || Iterations: [7945|22927] || Loss: 0.0048575167942152145 || Time:   234.3362s\n",
+      "Save model at [34|100] to last.pth\n",
+      "=============================EVALUATION===================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████| 8/8 [00:06<00:00,  1.17it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting features...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████| 8/8 [00:02<00:00,  3.41it/s]\n",
+      "100%|███████████████████████████████████████████| 40/40 [00:03<00:00, 10.47it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating distance matrice...\n",
+      "Saving retrieval results...\n",
+      "Calculating distance matrice...\n",
+      "Saving retrieval results...\n",
+      "\n",
+      "Epochs: [34|100] || Loss: 0.005366931902244687 || Time:     6.8617 s\n",
+      "i2t/R@1: 0.0673 | i2t/R@5: 0.2487 | i2t/R@10: 0.354 | t2i/R@1: 0.2167 | t2i/R@5: 0.4724 | t2i/R@10: 0.5837 | \n",
+      "==========================================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 93%|█████████████████████████████████████▉   | 210/227 [03:36<00:17,  1.02s/it]"
      ]
     }
    ],
